Misc Sonar / Nullability improvements (#10422)