@@ -46,7 +46,7 @@ class ScenarioTest {
 
 		// Assert
 		assertEquals(5, steps.size());
-		assertEquals("step1.action.read", steps.get(0).getBaseKey());
+		assertEquals("step1.action.read", steps.getFirst().getBaseKey());
 		assertEquals("step2.action.write", steps.get(1).getBaseKey());
 		assertEquals("step3.action.writeline", steps.get(2).getBaseKey());
 		assertEquals("step5.action.read", steps.get(3).getBaseKey());
@@ -60,7 +60,7 @@ class ScenarioTest {
 
 		// Assert
 		assertEquals(7, steps2.size());
-		assertEquals("step1.action.read", steps2.get(0).getBaseKey());
+		assertEquals("step1.action.read", steps2.getFirst().getBaseKey());
 		assertEquals("step2.action.write", steps2.get(1).getBaseKey());
 		assertEquals("step3.action.writeline", steps2.get(2).getBaseKey());
 		assertEquals("step4.action.readline", steps2.get(3).getBaseKey());
@@ -124,7 +124,7 @@ class ScenarioTest {
 
 		// Assert
 		assertEquals(5, steps.size());
-		assertEquals("step1.action.read", steps.get(0).getBaseKey());
+		assertEquals("step1.action.read", steps.getFirst().getBaseKey());
 		assertEquals("step2.action.write", steps.get(1).getBaseKey());
 		assertEquals("step3.action.writeline", steps.get(2).getBaseKey());
 		assertEquals("step4.action.read", steps.get(3).getBaseKey());
@@ -152,7 +152,7 @@ class ScenarioTest {
 
 		// Assert
 		assertEquals(4, steps.size());
-		assertEquals("step1.action.read", steps.get(0).getBaseKey());
+		assertEquals("step1.action.read", steps.getFirst().getBaseKey());
 		assertEquals("step2.action.write", steps.get(1).getBaseKey());
 		assertEquals("step3.action.writeline", steps.get(2).getBaseKey());
 		assertEquals("step5.action.read", steps.get(3).getBaseKey());
